--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "express": "3.4.7",
-    "ejs": "*",
-    "less-middleware": "*"
+    "ejs": "0.8.5",
+    "less-middleware": "0.1.14"
   }
 }
