added bootstrap and jquery

--- a/bower.json
+++ b/bower.json
@@ -9,5 +9,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "bootstrap": "~3.0.3",
+    "jquery": "1.10.2"
+  }
 }
