--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "node": "0.10.x"
   },
   "scripts": {
+    "preinstall": "npm install -g bower",
+    "install": "bower install",
     "start": "node app.js"
   },
   "dependencies": {
