--- a/bower.json
+++ b/bower.json
@@ -11,7 +11,10 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.0.3",
-    "jquery": "1.10.2"
+    "backbone": "1.1.0",
+    "bootstrap": "3.1.0",
+    "jquery": "2.1.0",
+    "jquery-ui": "1.10.3",
+    "underscore": "1.5.2"
   }
 }
