trying to setup ENV variables

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,8 @@ deploy:
     master: edmunds-widgets-dev
     staging: edmunds-widgets-staging
     production: edmunds-widgets-prod
-  run:
-    secure: O5O5tChTo524JLy2hHr4yPXYviPCnGE66iShCqjkf8rJzAiZzoU2dFW7ZyhwPJe30sAEHD9xiqtoCFlhwYGeB28XhE2c/KQ++frp9kfkfxjbwonIxDVVflUswAnbKlTvGyNs+nuPrvK6LbpTqnmDf0+9JHp1TS0t4Dc0FNdTvXk=
+  env:
+    - TEST_VAR1="lorem"
+    - TEST_VAR2="ipsum"
 notifications:
   email: false
