--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,10 @@ deploy:
     master: edmunds-widgets-dev
     staging: edmunds-widgets-staging
     production: edmunds-widgets-prod
-  env:
+  run:
+    - "config:set TEST_VAR3=dolor"
+    - "config:set TEST_VAR4=sit"
+  config:
     - TEST_VAR1="lorem"
     - TEST_VAR2="ipsum"
 notifications:
