--- a/bower.json
+++ b/bower.json
@@ -11,10 +11,11 @@
     "tests"
   ],
   "dependencies": {
-    "backbone": "1.1.0",
+    "backbone": "1.0.0",
     "bootstrap": "3.1.0",
-    "jquery": "2.1.0",
+    "jquery": "1.11.0",
     "jquery-ui": "1.10.3",
+    "requirejs": "2.1.10",
     "underscore": "1.5.2"
   }
 }
