--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "express": "3.4.7",
     "ejs": "0.8.5",
+    "express": "3.4.7",
+    "less": "1.6.3",
     "less-middleware": "0.1.14"
   }
 }
