added before_script section

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,9 @@ env:
 install:
   - gem install foreman -v 0.61
 
+before_script:
+  - foreman start
+
 test:
   - mvn clean test -Durl=http://localhost:5000
 
