updated test task

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preinstall": "npm install -g bower",
     "install": "bower install",
     "start": "node app.js",
-    "test": "mvn clean test -Durl=http://localhost:5000"
+    "test": "mvn clean test"
   },
   "dependencies": {
     "ejs": "0.8.5",
