removed url parameter [skip ci]

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ before_install:
   - gem install foreman -v 0.61
 
 script:
-  - foreman start & mvn clean test -Durl=http://localhost:5000
+  - foreman start & mvn clean test
 
 deploy:
   provider: heroku
