--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ rvm:
 
 jdk:
   - openjdk7
-  - oraclejdk7
 
 env:
   global:
@@ -28,6 +27,7 @@ script:
 
 deploy:
   provider: heroku
+  buildpack: nodejs
   api_key:
     secure: IER0AhtZBkmwqWUI5/tpfv7du77yqnL8v0IdeaidQHZ7ucRPG8GBxY/+gpec17TTet6lsrK3dU7Hk4QXWKQSL2gu59zgY89x+o1LDSbY9otjqDJhJ7ipvm6WkctGJRYNphki40VgrfPbTFs3joW6dOff/jtFzR93ppsIp6E2eLE=
   app:
