skip bower's reporting message (https://github.com/bower/bower/issues/1102)

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "preinstall": "npm install -g bower",
-    "install": "bower install",
+    "install": "bower install | xargs echo",
     "start": "node app.js"
   },
   "dependencies": {
