--- a/bower.json
+++ b/bower.json
@@ -13,12 +13,10 @@
   "dependencies": {
     "backbone": "1.0.0",
     "bootstrap": "3.1.0",
+    "less": "~1.7.0",
     "jquery": "1.11.0",
     "jquery-ui": "1.10.3",
     "requirejs": "2.1.10",
     "underscore": "1.5.2"
-  },
-  "devDependencies": {
-    "less": "~1.7.0"
   }
 }
